<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="sounds"
        android:title="@string/pref_cat_sound">

        <unknownmoon.cryforlight.SliderPreference
            android:defaultValue="@integer/pref_sound_level_def_val"
            android:key="pref_sound_level"
            android:layout="@layout/preference_slider"
            android:summary="@string/pref_sound_level_summary"
            android:title="@string/pref_sould_level_title"
            app:headerLabelText="@string/pref_sould_level_title"
            app:headerValueFormat="@string/pref_sould_level_value_format"/>

    </PreferenceCategory>

</PreferenceScreen>